<resources>
    <string name="app_name">FirstNetworkApi</string>
    <string name="school_name">SCHOOL NAME</string>
    <string name="address">ADDRESS</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="more">MORE</string>
    <string name="someOtherString">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schools_details">Schools Details</string>
    <string name="boston_gmail_com">boston@gmail.com</string>
    <string name="www_boston_us">www.boston.us</string>
    <string name="school_description">Estudents who are prepared for college must have an education that encourages them to take risks as they produce and perform. Our college preparatory curriculum develops writers and has built a tight-knit community. Our school develops students who can think analytically and write creatively. Our arts programming builds on our 25 years of experience in visual, performing arts and music on a middle school level.</string>
    <string name="methodology_10">Methodology 10</string>
    <string name="math_5">Math 5</string>
    <string name="ecology_9">Ecology 9</string>
    <string name="school_subject">School Subject</string>
    <string name="score">Avg Score</string>
    <string name="reading">Reading</string>
    <string name="_300">300</string>
    <string name="math">Math</string>
    <string name="_450">450</string>
    <string name="trishika_dasari">Trishika Dasari</string>
    <string name="guntur">Guntur</string>
    <string name="_230">230</string>
    <string name="writing">Writing</string>
    <string name="phoneicon">phoneIcon</string>
</resources>