<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:backgroundTint="@color/graylight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/school_name"
            android:text="@string/school_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/school_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/address"
            android:textSize="15sp"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/school_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textColor="@color/gray"
            />

        <Button
            android:id="@+id/more_btn"
            android:text="@string/more"
            android:background="@drawable/buttom"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>